# ParseMetro

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  entitys.py  logger.py  mixins.py  parser.py  pyproject.toml  requirements.txt
config/: config.py
constants/: city.py  text.py
logic/: entitys.py  mixins.py  parser.py
parse-data/: data - 2023-10-14 17:20:25.json  data - Москва - 2023-10-15 10:02:30.json  data - Санкт-Петербург - 2023-10-16 10:02:34.json
services/: create_city.py  get_city.py  logger.py  path_folder.py
